# toon-parser

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml
benches/: micro_benchmarks.rs
python/: atoonpy.py  toon_parser_async.py
src/: lib.rs
