[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "toon-parser"
version = "0.1.2"
description = "Fast Python bindings for TOON format parser"
authors = [
    {name = "magi8101", email = "sharmamagi0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
keywords = ["toon", "parser", "serialization", "performance"]
license = {text = "MIT OR Apache-2.0"}

[project.urls]
Homepage = "https://github.com/magi8101/toonpy"
Repository = "https://github.com/magi8101/toonpy"
Documentation = "https://github.com/magi8101/toonpy#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "toon_parser"
